page cleanups, contact form

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -13,7 +13,7 @@
             <div class="content">
                 <section class="parallax-section">
                     <div class="parallax-inner">
-                        <div class="bg" data-bg="images/home/lede-bg.jpg" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
+                        <div class="bg" data-bg="https://imgix.cosmicjs.com/d3bba090-fe27-11ea-a525-3597bcdfdc76-lede-bg.jpg" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
                         <div class="overlay"></div>
                     </div>
                     <div class="container">
