--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -48,7 +48,7 @@
                             <!-- 3 -->
                             <a class="serv-item" href="#ser3">
                                 <div class="serv-item-inner">
-                                    <img  src="images/home/mixeduse.jpg"   alt="">
+                                    <img  src="https://imgix.cosmicjs.com/c3cb9460-fe27-11ea-a525-3597bcdfdc76-mixeduse.jpg"   alt="">
                                     <div class="ser-title">
                                         <h3>Property management</h3>
                                     </div>
@@ -58,7 +58,7 @@
                             <!-- 2 -->
                             <a class="serv-item" href="#ser2">
                                 <div class="serv-item-inner">
-                                    <img  src="images/home/commercials.jpg"   alt="">
+                                    <img  src="https://imgix.cosmicjs.com/c3cb1f30-fe27-11ea-a525-3597bcdfdc76-commercials.jpg"   alt="">
                                     <div class="ser-title">
                                         <h3>Development</h3>
                                     </div>
