--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
                     <div class="slideshow-item owl-carousel" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);">
                         <!-- 1 -->
                         <div class="item">
-                            <div class="bg" style="background-image:url(images/home/unsplash-2.jpg)"></div>
+                            <div class="bg" style="background-image:url(https://imgix.cosmicjs.com/7cf1c320-fe27-11ea-a525-3597bcdfdc76-unsplash-2.jpg)"></div>
                         </div>
                         <!-- 2 -->
                         <div class="item">
@@ -24,7 +24,7 @@
                         </div>
                         <!-- 3 -->
                         <div class="item">
-                            <div class="bg" style="background-image:url(images/home/unsplash-4.jpg)"></div>
+                            <div class="bg" style="background-image:url(https://imgix.cosmicjs.com/7cf0d8c0-fe27-11ea-a525-3597bcdfdc76-unsplash-4.jpg)"></div>
                         </div>
                     </div>
                     <!-- Hero image   end -->
@@ -130,7 +130,7 @@
                             <!-- 3 -->
                             <a class="serv-item" href="#ser3">
                                 <div class="serv-item-inner">
-                                    <img  src="images/home/mixeduse.jpg"   alt="">
+                                    <img  src="https://imgix.cosmicjs.com/c3cb9460-fe27-11ea-a525-3597bcdfdc76-mixeduse.jpg"   alt="">
                                     <div class="ser-title">
                                         <h3>Property management</h3>
                                     </div>
@@ -140,7 +140,7 @@
                             <!-- 2 -->
                             <a class="serv-item" href="#ser2">
                                 <div class="serv-item-inner">
-                                    <img  src="images/home/commercials.jpg"   alt="">
+                                    <img  src="https://imgix.cosmicjs.com/c3cb1f30-fe27-11ea-a525-3597bcdfdc76-commercials.jpg"   alt="">
                                     <div class="ser-title">
                                         <h3>Development</h3>
                                     </div>
