--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -249,7 +249,7 @@
                                                 {{/each}}
                                             </ul>
                                             <div class="paralax-wrap">
-                                                <img src="{{metadata.lead_image.imgix_url}}" class="respimg" alt="{{title}}">
+                                                <img src="{{metadata.lead_image.imgix_url}}?q=&auto=compress,enhance," class="respimg" alt="{{title}}">
                                             </div>
                                         </div>
                                         <div class="parallax-deck" data-top-bottom="transform: translateY(-200px);" data-bottom-top="transform: translateY(200px);">
