page cleanups, contact form

--- a/views/portfolio-1.handlebars
+++ b/views/portfolio-1.handlebars
@@ -61,7 +61,7 @@
                                 {{#each portfolio}}
                                 <div class="gallery-item {{#each metadata.tags}}{{slug}} {{/each}}">
                                     <div class="grid-item-holder">
-                                        <img  src="{{metadata.lead_image.imgix_url}}"    alt="{{title}}">
+                                        <img  src="{{metadata.lead_image.imgix_url}}?q=&auto=compress,enhance,"    alt="{{title}}">
                                         <div class="port-desc-holder">
                                             <div class="port-desc">
                                                 <div class="grid-item">
