--- a/views/portfolio-single.handlebars
+++ b/views/portfolio-single.handlebars
@@ -14,7 +14,7 @@
             <div class="content">
                 <section class="parallax-section">
                     <div class="parallax-inner">
-                        <div class="bg" data-bg="{{portfolio.metadata.lead_image.imgix_url}}" data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
+                        <div class="bg" data-bg="{{portfolio.metadata.lead_image.imgix_url}}?q=&auto=compress,enhance," data-top-bottom="transform: translateY(300px);" data-bottom-top="transform: translateY(-300px);"></div>
                         <div class="overlay"></div>
                     </div>
                     <div class="container">
