--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -169,7 +169,7 @@
                                         <h3>Property Management</h3>
                                         <ul class="ser-list">
                                             <li>We manage each property closely using a vast network. </li>
-                                            <li>Our expertise provides a high touch service that keeps unites rented and well maintained.</li>
+                                            <li>Our expertise provides a high touch service that keeps units rented and well maintained.</li>
                                         </ul>
                                     </div>
                                     <!-- 3 end -->  
