--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -17,11 +17,13 @@
                 <ul>
                     <li>
                         <a href="/about">About</a>
-                        <!-- Scroll navigation  -->
                     </li>
                     <li><a href="/services">Services</a></li>
                     <li>
                         <a href="/portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="/leasings">Leasings</a>
                     </li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
