--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -41,7 +41,7 @@
                         <div class="row">
                             <div class="col-md-8">
                                 <h2 class="section-title">Get in <strong>Touch</strong></h2>
-                                <p>We’re eager to help you with any questions you have about our services, projects, or process.</p>
+                                <p>We are eager to help you with any questions you have about our services, projects, or process.</p>
                             </div>
                         </div>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48393.60026719826!2d-74.007281!3d40.704806!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a161aaa68c5%3A0x11f4f914d4c083b5!2s99%20Wall%20St%20%231809%2C%20New%20York%2C%20NY%2010005!5e0!3m2!1sen!2sus!4v1600922477291!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0; float: left;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
