--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -48,14 +48,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <!-- section title  -->
-                                <h2 class="section-title">Three Leaf Development has over <br> <strong>30 years of expertise</strong> <br> in real estate development.</h2>
-                                <!-- section title  end -->
-                            </div>
-                            <div class="col-md-12">
-                                <p>It is with this expertise that we have been able to develop and construct beautiful homes and buildings all over the country. The phenomenal quality, great design, and attention to detail allow for major value creation for each different project.</p>
-                                
-                                <a href="/about" class="btn anim-button fl-l"><span>Our Story</span><i class="fa fa-long-arrow-right"></i></a>
+                                {{{introtext.content}}}
                             </div>
                         </div>
                     </div>
