--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -36,7 +36,7 @@
                 <div class="footer-item">
                     <h4 class="text-link">Address</h4>
                     <ul>
-                        <li><span>99 Wall Street #1809, New York, NY 10005</span></li>
+                        <li><span>P.O. Box 510378, Milwaukee WI 53203</span></li>
                     </ul>
                 </div>
             </div>
