--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,6 +49,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 {{{introtext.content}}}
+                                <a href="/about" class="btn anim-button fl-l"><span>Our Story</span><i class="fa fa-long-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
